k8s/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: fastapi
  name: fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: fastapi
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: fastapi
    spec:
      containers:
        - env:
            - name: PYTHONUNBUFFERED
              value: "1"
          image: 098195740240.dkr.ecr.us-east-1.amazonaws.com/petl:latest
          name: fastapi
          ports:
            - containerPort: 8000
              protocol: TCP
      restartPolicy: Always
