k8s/ollama-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: ollama
  name: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ollama
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: ollama
    spec:
      containers:
        - image: 098195740240.dkr.ecr.us-east-1.amazonaws.com/petl:latest
          name: ollama
          ports:
            - containerPort: 11434
              protocol: TCP
      hostname: ollama
      restartPolicy: Always
