k8s/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: fastapi
  name: fastapi
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: fastapi
