k8s/petl-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petl-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /petl
            pathType: Prefix
            backend:
              service:
                name: fastapi
                port:
                  number: 8000
